# crypto_ant

./: .gitignore  README.md  env.example  mcp.json.example  pyproject.toml
src/crypto_ant/: agent.py  cli.py  model.py
src/crypto_ant/tools/: __init__.py
src/crypto_ant/tools/search/: google.py  utils.py
src/crypto_ant/utils/: context.py  logger.py
src/cryptoant/: agent.py  cli.py  model.py  prompts.py
src/cryptoant/tools/: __init__.py
src/cryptoant/tools/search/: google.py  utils.py
src/cryptoant/utils/: context.py  intro.py  logger.py  ui.py
