[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryptoAnt"
version = "0.1.0"
description = "AI agent for crypto trading & investment."
authors = []
requires-python = ">=3.10"
dependencies = [
    "googlenewsdecoder>=0.1.7",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=0.3.35",
    "langsmith>=0.3.37",
    "openai>=2.2.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
ant = "cryptoant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
